# auto-create-email

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/: client.py
src/core/: config.py  console.py  logger.py
src/utils/: auth.py  client.py  files.py  proxies.py
